# diet-assistant

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
diet_assistant/: asgi.py  settings.py  urls.py  wsgi.py
diets/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
diets/migrations/: 0001_initial.py  0002_alter_dietplan_patient.py  0003_meallog.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  EmptyState.jsx  Index.jsx  Input.jsx  MacroBar.jsx  Modal.jsx  Select.jsx  Spinner.jsx
frontend/src/hooks/: useList.js
frontend/src/pages/: Dashboard.jsx  DietPlansPanel.jsx  DietitianDashboard.jsx  FindDietitian.jsx  Login.jsx  ProductsPanel.jsx  RecipesPanel.jsx  Register.jsx  SettingsPanel.jsx
frontend/src/services/: api.js
products/: models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_calories_per_100g_and_more.py  0003_product_author.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_date_of_birth_user_dietetitian_user_gender_and_more.py  0003_remove_user_dietetitian_user_dietitian_and_more.py  0004_dietitianrequest.py  0005_alter_user_role.py  0006_user_active_plan.py
