[project]
name = "diet-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.1",
    "django==6.0.6",
    "django-cors-headers==4.9.0",
    "django-filter>=25.2",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "djangorestframework-stubs>=3.17.0",
    "drf-spectacular>=0.29.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "pyjwt==2.13.0",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "tzdata==2026.2",
]
